Modified for the latest version of Actoverse

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,5 +7,6 @@ akka.http.client.connecting-timeout = 3600 s
 akka.log-dead-letters = 0
 akka.log-dead-letters-during-shutdown = off
 
-actoverse.wshandler.hostname = "localhost"
-actoverse.wshandler.port = 3000
+actoverse.target-actorpath = "akka://demo/user/.+"
+actoverse.debugger-system-name = "ActoverseDebuggerSystem"
+actoverse.debugger-actor-name = "__debugger"
